--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "github-jobs-api-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -30,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"https://jobs.github.com"
 }
